<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RadioGroup
        android:id="@+id/radiog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="UselessLeaf"
        android:layout_margin="10dp">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/one"
            android:textSize="25sp"
            android:id="@+id/ten"
            android:layout_margin="5dp"
            />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/two"
            android:textSize="25sp"
            android:id="@+id/twenty"
            android:layout_margin="5dp"
            />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/three"
            android:textSize="25sp"
            android:id="@+id/thirty"
            android:layout_margin="5dp"
            />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/four"
            android:textSize="25sp"
            android:id="@+id/forty"
            android:layout_margin="5dp"
            />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/five"
            android:textSize="25sp"
            android:id="@+id/fifty"
            android:layout_margin="5dp"
            />

    </RadioGroup>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ok"
        android:layout_gravity="left"
        android:layout_margin="10dp"
        tools:ignore="RtlHardcoded"
        android:id="@+id/font_setter_btn"/>

</LinearLayout>